RESOLVED FIXED249687
[WinCairo] REGRESSION(258145@main) wheel events can't scroll the page
https://bugs.webkit.org/show_bug.cgi?id=249687
Summary [WinCairo] REGRESSION(258145@main) wheel events can't scroll the page
Fujii Hironori
Reported 2022-12-20 16:54:21 PST
[WinCairo] REGRESSION(258145@main) wheel events can't scroll the page WinCairo WK2 can't scroll a page by wheel event at all. Since 258145@main (bug#249613)
Attachments
Patch (1.12 KB, patch)
2022-12-20 17:03 PST, Fujii Hironori
no flags
Fujii Hironori
Comment 1 2022-12-20 17:03:11 PST
Simon Fraser (smfr)
Comment 2 2022-12-20 17:06:50 PST
Comment on attachment 464128 [details] Patch Sorry for the breakage!
Fujii Hironori
Comment 3 2022-12-20 17:07:45 PST
Comment on attachment 464128 [details] Patch Thank you for the review.
EWS
Comment 4 2022-12-20 18:04:35 PST
Committed 258171@main (e4be47ca6b8d): <https://commits.webkit.org/258171@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 464128 [details].
Radar WebKit Bug Importer
Comment 5 2022-12-20 18:05:18 PST
Note You need to log in before you can comment on or make changes to this bug.