REGRESSION(258145@main) wheel events can't scroll the page https://bugs.webkit.org/show_bug.cgi?id=249687

Reviewed by Simon Fraser.

WinCairo WK2 can't scroll a page by wheel events.

* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::handleWheelEvent):
Set handlingResult.steps MainThreadForScrolling.

Canonical link: https://commits.webkit.org/258171@main